[gd_scene load_steps=7 format=3 uid="uid://bhuxg0mp7sxn"]

[ext_resource type="Texture2D" uid="uid://n5cit1sldx6i" path="res://assets/gfx/pixel_cloud_transparent.png" id="1_3qp7h"]
[ext_resource type="Script" path="res://scenes/cloud.gd" id="1_fpxjk"]
[ext_resource type="Texture2D" uid="uid://b5b7dh0djck7l" path="res://assets/gfx/cloud_shape2_1.png" id="3_grmsd"]
[ext_resource type="Texture2D" uid="uid://607qplpdqguu" path="res://assets/gfx/cloud_shape4_4.png" id="4_um5no"]
[ext_resource type="Texture2D" uid="uid://be4go8ff6kdpi" path="res://assets/gfx/cloud_shape5_5.png" id="5_ujxuf"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_1fqg5"]
radius = 7.0
height = 82.0

[node name="Cloud" type="CharacterBody2D"]
script = ExtResource("1_fpxjk")

[node name="Original" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("1_3qp7h")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_1fqg5")
disabled = true

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[node name="AlternativeCloud_1" type="Sprite2D" parent="."]
visible = false
texture_filter = 1
texture = ExtResource("3_grmsd")

[node name="AlternativeCloud_2" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("4_um5no")

[node name="AlternativeCloud_3" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("5_ujxuf")

[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_screen_exited"]
